# telegram-bot

./: .env.dist  .gitignore  README.md  commands.example.json  config.example.toml  pyproject.toml
.github/workflows/: pytest.yml
initial_data/: units.json
src/: bot.py  config.py  main.py  shortcuts.py
src/core/: exceptions.py
src/db/: __init__.py  engine.py  redis_db.py  reports.py  units.py
src/handlers/: __init__.py  errors.py  roles.py  settings.py  start.py  statistics.py  write_offs_reports.py
src/keyboards/: buttons.py  markups.py
src/middlewares/: __init__.py  auth_client.py  db_api_client.py  dodo_api_client.py
src/models/: __init__.py  api.py  callback_data.py  database.py  database_api.py  mappers.py  type_aliases.py
src/repositories/: auth_credentials.py  base.py  db_api.py  dodo_api.py
src/responses/: __init__.py  base.py  settings.py  start.py  statistics.py  write_offs_reports.py
src/services/: api.py  api_responses.py  auth_api.py  batch_operations.py  converters.py  database_api.py  dependencies.py  dodo_api.py  filters.py  http_client_factory.py  mappers.py  parsers.py  period.py  periods.py  statistics.py  statistics_reports.py  strategies.py  text_utils.py  write_offs_api.py
src/utils/: callback_data.py  constants.py  convert_models.py  exceptions.py  helpers.py  logger.py  states.py
src/views/: __init__.py  base.py  menu.py  role.py  settings.py
tests/: conftest.py  test_exceptions.py  test_http_client_factory.py
tests/fixtures/: courier_orders.py
tests/test_domain/: test_calculate_total_trips_count.py  test_calculate_trips_with_one_order_percentage.py  test_courier_orders_by_trips_count_grouper.py
(+66 files in other folders)
