[tool.poetry]
name = "dodo__telegram-bot"
version = "0.1.0"
description = ""
authors = ["usbtypec1 <eldos.baktybekov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^2.22.1"
pydantic = "^1.9.2"
python-dotenv = "^0.20.0"
pendulum = "^2.1.2"
httpx = "^0.23.0"
dnspython = "^2.2.1"
motor = "^3.0.0"
bs4 = "^0.0.1"
pytest-asyncio = "^0.19.0"
loguru = "^0.6.0"
dodo-lib-usbtypec1 = "^1.1.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
    "src",
]