[tool.poetry]
name = "dodo__telegram-bot"
version = "0.1.0"
description = ""
authors = ["usbtypec1 <eldos.baktybekov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^2.25.1"
pydantic = "^1.9.2"
httpx = "^0.23.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
    "src",
]