[tool.poetry]
name = "dodo__telegram-bot"
version = "0.1.0"
description = ""
authors = ["usbtypec1 <eldos.baktybekov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^2.25.1"
pydantic = "^1.10.7"
httpx = "^0.23.0"
dodo-is-api = "^0.5.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
pytest-httpx = "^0.21.3"
pytest-cov = "^4.0.0"
pytest-asyncio = "^0.21.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
    "src",
]